/*
 * $Id: ChangeLog,v 1.4854 2006/03/07 10:00:39 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-07 10:39 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include\hbextern.ch
    + Added
       EXTERNAL SETFCREATE, CSETSAFETY, STRFILE, FILESTR, SCREENFILE
       EXTERNAL SCREENFILE, FILESCREEN

  * source\pp\ppcore.c
    ! Fixed bug in handling of E" - was activate for any token ending with E before a "..."

2006-03-07 12:15 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    ! A fix in determining valid stop lines.

2006-03-06 10:27 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    * Minor correction in hb_vmEqual() for hb_objGetOpOver( pItem1 ) & HB_CLASS_OP_EXACTEQUAL

2006-03-06 10:17 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    + Added support for VTWrraper() class - for now only VT_UNKNOWN and ( VT_UNKNOWN | VT_BYREF )
  ! Fixed GPG trap for VT_UNKNOWN in hb_oleVariantToItem()

2006-03-04 17:20 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    * Fixed bug where skipping FROM eof would go to record 1
      Somewhere we lost one of the special handling items for how ADS is
      radically different from Clipper. The fact is, ACE32 will skip off of EOF
      to record 1 !!!  We instead need to trap that condition and do nothing,
      of course.

2006-03-03 15:05 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/source/vm/dynsym.c
    + added hb_dynsymFindSymbol() and hb_dynsymGetSymbol() functions

2006-03-03 03:30 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/hbfind.c
    ! Fixed invalid handle error in Windows when file() fails
      (detected by AQTime profiler)

2006-03-02 18:06 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>